[package]
name = "flash_loans"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_loans"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
thiserror = "1.0"
uint = {version = "0.9.1", default-features = false}
borrower = {path = "../borrower", features = ["cpi"]}
solana-program = "1.18.13"

[dev-dependencies]
anchor-client = "0.30.0"
solana-sdk = "1.18.13"
